# encdr

./: README.md  example.py  pyproject.toml  specification.md
src/encdr/: encdr.py
tests/: test_autoencoder.py  test_integration.py  test_ncdr.py  test_package.py
