[project]
name = "ncdr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "henrywatkins", email = "h.watkins@ucl.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.5",
    "scikit-learn>=1.7.2",
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.scripts]
ncdr = "ncdr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
